[package]
name = "bevy_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [] }

# Small amount of optimizations required for dev
[profile.dev]
opt-level = 1

# High optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

